feat: Enhance achievement synchronization with Steam integration and add annotation processing support